src/objects/AllowedFields__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Contains the allowed fields for member, order and order item</description>
    <fields>
        <fullName>MemberAllowedFields__c</fullName>
        <description>Contains the member allowed fields</description>
        <label>GRS Member Allowed Fields</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>OrderAllowedFields1__c</fullName>
        <description>First set that contains the order allowed fields</description>
        <label>GRS Order Allowed Fields 1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>OrderAllowedFields2__c</fullName>
        <description>Second set that contains the allowed fields for order</description>
        <label>GRS Order Allowed Fields 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>OrderItemAllowedFields__c</fullName>
        <description>Contains the order item allowed fields</description>
        <label>GRS Order Item Allowed Fields</label>
        <type>TextArea</type>
    </fields>
    <label>GRS Allowed Fields</label>
</CustomObject>